@@ -1,5 +1,10 @@
 1999-06-20  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
 
+	* gtkhex.c: major rewrite of the gc handling code. added some
+	sanity checks.
+
+1999-06-20  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
+
 	* preferences.c, config.c, ghex.h: make showing the offset column
 	configurable.
 	* main.c, hex-document.c: respect offset column configuration when
